--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ title: About Me
 
 <img src="/assets/img/logo.png">
 <p>
-    아침형/계획형이 되고싶은 게으른/즉흥형 인간입니다
+    아침형/계획형이 되고싶은 게으른/즉흥적인 인간입니다
     <br>
     블로그를 열심히 할 예정입니다
 </p>
